--- a/src/main/resources/templates/courses-manager.html
+++ b/src/main/resources/templates/courses-manager.html
@@ -5,16 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Courses Manager</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-
 </head>
 <body>
-
-
 <div class="container" style="background-color: papayawhip; height: 70px; margin-top:100px">
     <h1 style="text-align: center; font-style: italic; font: 40pt Georgia; color: darkred">On this page you can manage courses</h1>
 </div>
-
-
 <div class="container" style="background-color: seashell; padding: 50px; border-radius:20px;">
     <table align="center" style="text-align: center; width: 80%">
         <tbody>
@@ -29,11 +24,19 @@
                     <button type="submit" class="btn btn-primary" style="width: 100%; font: 20pt Verdana; background-color: salmon">Show courses</button>
                 </form>
             </td>
+        </tr>
+        <tr>
             <td>
                 <form th:action="@{/main-page/courses/delete-course}">
                     <button type="submit" class="btn btn-primary" style="width: 100%; font: 20pt Verdana; background-color: yellow; color: darkred">Delete course</button>
                 </form>
             </td>
+            <td>
+                <form th:action="@{/main-page/courses/update-course}">
+                    <button type="submit" class="btn btn-primary" style="width: 100%; font: 20pt Verdana; background-color: yellow; color: darkred">Update course</button>
+                </form>
+            </td>
+        </tr>
         </tbody>
     </table>
 </div>
