--- a/src/main/resources/templates/users-manager.html
+++ b/src/main/resources/templates/users-manager.html
@@ -29,22 +29,27 @@
                     <button type="submit" class="btn btn-primary" style="width: 100%; font: 20pt Verdana; background-color: turquoise">Add new user</button>
                 </form>
             </td>
+        <tr/>
+        <tr>
             <td>
                 <form th:action="@{/main-page/users/delete-user}">
                     <button type="submit" class="btn btn-primary" style="width: 100%; font: 20pt Verdana; background-color: darkturquoise">Delete user</button>
                 </form>
             </td>
+            <td>
+                <form th:action="@{/main-page/users/update-user}">
+                    <button type="submit" class="btn btn-primary" style="width: 100%; font: 20pt Verdana; background-color: darkturquoise">Update user</button>
+                </form>
+            </td>
+        </tr>
         </tbody>
     </table>
 </div>
-
 <div align="center">
     <form th:action="@{/main-page}">
         <button type="submit" class="btn btn-primary" style="width: 80%">Back to main page</button>
     </form>
-
 </div>
-
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
 </html>
