--- a/src/main/resources/templates/registrations-manager.html
+++ b/src/main/resources/templates/registrations-manager.html
@@ -13,14 +13,16 @@
 <div class="container" style="background-color: papayawhip; height: 70px; margin-top:100px">
     <h1 style="text-align: center; font-style: italic; font: 40pt Georgia; color: darkred">On this page you can manage registrations</h1>
 </div>
-
-
 <div class="container" style="background-color: seashell; padding: 50px; border-radius:20px;">
     <table align="center" style="text-align: center; width: 80%">
         <tbody>
         <tr>
-
-
+            <td>
+                <form th:action="@{/main-page/all-registrations}">
+                    <button type="submit" class="btn btn-primary" style="width: 100%; font: 20pt Verdana; background-color: darkgoldenrod">Show registrations</button>
+                </form>
+            </td>
+        </tr>
         </tbody>
     </table>
 </div>
