--- a/src/main/resources/templates/registrations-manager.html
+++ b/src/main/resources/templates/registrations-manager.html
@@ -22,6 +22,11 @@
                     <button type="submit" class="btn btn-primary" style="width: 100%; font: 20pt Verdana; background-color: darkgoldenrod">Show registrations</button>
                 </form>
             </td>
+            <td>
+                <form th:action="@{/main-page/registrations}">
+                    <button type="submit" class="btn btn-primary" style="width: 100%; font: 20pt Verdana; background-color: darkgoldenrod">Add registration</button>
+                </form>
+            </td>
         </tr>
         </tbody>
     </table>
