--- a/src/main/resources/templates/registrations-manager.html
+++ b/src/main/resources/templates/registrations-manager.html
@@ -23,6 +23,13 @@
                 </form>
             </td>
             <td>
+                <form th:action="@{/main-page/registrations/delete-registration}">
+                    <button type="submit" class="btn btn-primary" style="width: 100%; font: 20pt Verdana; background-color: darkgoldenrod">Delete registration</button>
+                </form>
+            </td>
+        </tr>
+        <tr>
+            <td>
                 <form th:action="@{/main-page/registrations}">
                     <button type="submit" class="btn btn-primary" style="width: 100%; font: 20pt Verdana; background-color: darkgoldenrod">Add registration</button>
                 </form>
