--- a/src/main/resources/templates/admin/classes-manager.html
+++ b/src/main/resources/templates/admin/classes-manager.html
@@ -5,10 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Classes Manager</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-
+    <style>
+        .custom-navbar {
+          background-color: palegreen;
+        }
+    </style>
 </head>
 <body>
-
+<div th:insert="fragments/navbar-for-admin::nav"></div>
 
 <div class="container" style="background-color: papayawhip; height: 70px; margin-top:100px">
     <h1 style="text-align: center; font-style: italic; font: 40pt Georgia; color: darkred">On this page you can manage classes</h1>
