--- a/src/main/resources/templates/admin/notifications/all-notifications.html
+++ b/src/main/resources/templates/admin/notifications/all-notifications.html
@@ -6,10 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>View All Notifications</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <style>
+        .custom-navbar {
+          background-color: palegreen;
+        }
+    </style>
 </head>
 
 
 <body style="background-color: #f6f6f6">
+<div th:insert="fragments/navbar-for-admin::nav"></div>
 <div class="container" style="margin-top: 100px; background-color: white; padding: 50px; border-radius:20px;">
     <table align="center" style="text-align: center; width:100%">
         <thead>
