--- a/src/main/resources/templates/admin/registrations/delete-registration.html
+++ b/src/main/resources/templates/admin/registrations/delete-registration.html
@@ -5,8 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Delete registration</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <style>
+        .custom-navbar {
+          background-color: palegreen;
+        }
+    </style>
 </head>
 <body>
+<div th:insert="fragments/navbar-for-admin::nav"></div>
 <div class="container" style="margin-top: 100px; background-color: white; padding: 50px; border-radius:20px;">
     <table align="center" style="text-align: center; width:80%">
         <thead>
