--- a/src/main/resources/templates/admin/blocks/block-details.html
+++ b/src/main/resources/templates/admin/blocks/block-details.html
@@ -1,74 +1,54 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Block details</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
-<body>
+<body style="background-color: lightgreen">
 <div th:insert="fragments/navbar-for-admin::nav"></div>
-
-<div class="container" align="center" style="margin-top:100px">
+<div class="container" align="center" style="margin-top:30px; background-color: palegreen; width: 50%">
     <div class="row" align="center" text-align="center">
         <div class="block" style="width: 100%; margin-bottom: 25px;">
             <div th:object="${blockById}" class="block-body">
-                <h5 class="block-title custom-center" th:text="${blockById.blockTitle}">Block title</h5>
+                <h5 class="block-title custom-center" th:text="${blockById.blockTitle}" style="text-align: center; color: darkgreen; font-family: Brush Script MT; font-size: 60pt;">Block title</h5>
                 <a>
-                    <img th:src="@{/uploads/blocks.png}" class="responsive" />
+                    <img th:src="@{/uploads/block.png}" class="responsive" />
                 </a>
             </div>
         </div>
     </div>
 </div>
-
-
-<div class="container" style="margin-top: 100px; background-color: white; padding: 50px; border-radius:20px;">
-    <div class="container" style="text-align: center; font-style: italic; font: 40pt Georgia; color: darkred">Classes in the block</div>
-    <table align="center" style="text-align: center; width:80%">
-        <thead>
-        <tr style="background-color: palegreen; width: 100%; height: 30px">
-            <th>Id</th>
-            <th>Topic</th>
-            <th>Date</th>
-            <th>Time</th>
-            <th>Block title</th>
-            <th>Course title</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each="class : ${classesInBlock}">
-            <td th:text="${class.id}"></td>
-            <td th:text="${class.topic}"></td>
-            <td th:text="${class.date}"></td>
-            <td th:text="${class.time}"></td>
-            <td th:text="${class.blockTitle}"></td>
-            <td th:text="${class.courseTitle}"></td>
-        </tr>
-        </tbody>
-    </table>
+<div class="container" align="center" style="margin-top:30px; margin-bottom: 30px; background-color: palegreen">
+    <div style="background-color: palegreen; margin-top: 30px; margin-bottom: 30px">
+        <h2 style="text-align: center; color: darkgreen; font-family: Brush Script MT; font-size: 60pt;">Classes</h2>
+        <table class="table table-striped" align="center" style="text-align: center; width:80%; margin-bottom: 30px">
+            <thead>
+            <tr style="background-color: palegreen; width: 100%; color: darkgreen; font-family: Brush Script MT; font-size: 30pt">
+                <th>Id</th>
+                <th>Topic</th>
+                <th>Date</th>
+                <th>Time</th>
+                <th>Block title</th>
+                <th>Course title</th>
+            </tr>
+            </thead>
+            <tbody style="margin-bottom: 30px">
+            <tr style="background-color: palegreen; width: 100%; color: darkgreen; margin-bottom: 30px" th:each="class : ${classesInBlock}">
+                <td th:text="${class.id}"></td>
+                <td th:text="${class.topic}"></td>
+                <td th:text="${class.date}"></td>
+                <td th:text="${class.time}"></td>
+                <td th:text="${class.blockTitle}"></td>
+                <td th:text="${class.courseTitle}"></td>
+            </tr>
+            </tbody>
+        </table>
+        </br>
+    </div>
 </div>
-
-<br/>
-<div align="center">
-    <form th:action="@{/main-page/blocks-manager}">
-        <button type="submit" class="btn btn-primary" style="width: 40%">Back to the Blocks Manager</button>
-    </form>
-</div>
-<br/>
-<div align="center">
-    <form th:action="@{/main-page/courses-manager}">
-        <button type="submit" class="btn btn-primary" style="width: 40%">Back to the Courses Manager</button>
-    </form>
-</div>
-<br/>
-<div align="center">
-    <form th:action="@{/main-page}">
-        <button type="submit" class="btn btn-primary" style="width: 40%">Back to main page</button>
-    </form>
-</div>
-
-
+</br>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
 </html>
