--- a/src/main/resources/templates/admin/classes/add-class.html
+++ b/src/main/resources/templates/admin/classes/add-class.html
@@ -6,76 +6,53 @@
     <title>Add new class</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
-
-<body>
+<body style="background-color: lightgreen">
 <div th:insert="fragments/navbar-for-admin::nav"></div>
-<div class="container" style="text-align: center; font-style: italic; font: 40pt Georgia; color: darkred">Blocks</div>
-
-<div class="container" style="background-color: white; padding: 50px; border-radius:20px;">
-    <table class="table table-striped" align="center" style="text-align: center; width:50%">
-        <thead>
-        <tr style="background-color: palegreen; width: 100%; height: 30px">
+<div class="container" style="background-color: palegreen; padding: 50px; border-radius:20px; margin-top: 10px">
+    <h2 style="text-align: center; font-size: 60pt; font-family: Brush Script MT; color: darkgreen">Blocks</h2>
+    <table class="table table-striped" align="center" style="text-align: center; width:50%; background-color: palegreen; border-color: darkgreen;">
+        <thead style="margin-top: 10px">
+        <tr style="background-color: palegreen; width: 100%; color: darkgreen; font-family: Brush Script MT; font-size: 40pt">
             <th>Id</th>
             <th>Block title</th>
             <th>Course title</th>
         </tr>
         </thead>
         <tbody>
-        <tr th:each="block : ${blocks}">
+        <tr style="background-color: palegreen; width: 100%; color: darkgreen;" th:each="block : ${blocks}">
             <td th:text="${block.id}"></td>
             <td th:text="${block.blockTitle}"></td>
             <td th:text="${block.courseTitle}"></td>
         </tr>
         </tbody>
     </table>
-
 </div>
-
-
-<div class="container" style="text-align: center; font-style: italic; font: 40pt Georgia; color: darkred">Add new class to the chosen block</div>
-
-<div class="container" style="margin-top:100px;">
+<div class="container" style="background-color: palegreen; margin-top:10px; margin-bottom: 30px">
+    <h2 style="text-align: center; font-size: 60pt; font-family: Brush Script MT; color: darkgreen">Add new class to the chosen block</h2>
     <div class="row">
         <form th:action="@{/main-page/classes/add}" th:object="${newClass}" method="post">
             <div class="mb-3">
-                <label for="class-topic" class="form-label">Topic</label>
-                <input type="text" class="form-control" id="class-topic" th:field="*{topic}">
+                <label style="color: darkgreen; font-family: Brush Script MT; font-size: 30pt" for="class-topic" class="form-label">Topic</label>
+                <input style="background-color: darkgreen; color: palegreen" type="text" class="form-control" id="class-topic" th:field="*{topic}">
             </div>
-
             <div class="mb-3">
-                <label for="date" class="form-label">Date</label>
-                <input type="text" placeholder="YYYY-MM-DD" class="form-control" id="date" th:field="*{date}">
+                <label style="color: darkgreen; font-family: Brush Script MT; font-size: 30pt" for="date" class="form-label">Date</label>
+                <input style="background-color: darkgreen; color: palegreen" type="text" placeholder="YYYY-MM-DD" class="form-control" id="date" th:field="*{date}">
             </div>
-
             <div class="mb-3">
-                <label for="time" class="form-label">Time</label>
-                <input type="text" placeholder="HH:MM" class="form-control" id="time" th:field="*{time}">
+                <label style="color: darkgreen; font-family: Brush Script MT; font-size: 30pt" for="time" class="form-label">Time</label>
+                <input style="background-color: darkgreen; color: palegreen" type="text" placeholder="HH:MM" class="form-control" id="time" th:field="*{time}">
             </div>
-
             <div class="mb-3">
-                <label for="blockId" class="form-label">Block Id</label>
-                <input type="text" placeholder="Type id of EXISTING block" class="form-control" id="blockId" th:field="*{blockId}">
+                <label style="color: darkgreen; font-family: Brush Script MT; font-size: 30pt" for="blockId" class="form-label">Block Id</label>
+                <input style="background-color: darkgreen; color: palegreen" type="text" placeholder="Type id of EXISTING block" class="form-control" id="blockId" th:field="*{blockId}">
             </div>
             <div align="center">
-                <button type="submit" class="btn btn-primary" style="width: 100%">Add</button>
+                <button type="submit" class="btn btn-primary" style="width: 30%; margin-bottom: 15px; background-color: darkgreen; border-color: darkgreen; color: palegreen">Add</button>
             </div>
         </form>
     </div>
 </div>
-<br/>
-<div align="center">
-    <form th:action="@{/main-page/classes-manager}">
-        <button type="submit" class="btn btn-primary" style="width: 40%">Back to the Classes Manager</button>
-    </form>
-</div>
-<br/>
-<div align="center">
-    <form th:action="@{/main-page}">
-        <button type="submit" class="btn btn-primary" style="width: 40%">Back to main page</button>
-    </form>
-</div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-
-
 </body>
 </html>
