--- a/src/main/resources/templates/admin/classes/all-classes.html
+++ b/src/main/resources/templates/admin/classes/all-classes.html
@@ -4,51 +4,32 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>View All Classes</title>
+    <title>Classes</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
-
-
-<body style="background-color: #f6f6f6">
+<body style="background-color: lightgreen">
 <div th:insert="fragments/navbar-for-admin::nav"></div>
-<div class="container" style="margin-top: 100px; background-color: white; padding: 50px; border-radius:20px;">
-    <table align="center" style="text-align: center; width:80%">
-        <thead>
-        <tr style="background-color: palegreen; width: 100%; height: 30px">
-            <th>Id</th>
-            <th>Topic</th>
-            <th>Date</th>
-            <th>Time</th>
-            <th>Block title</th>
-            <th>Course title</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each="class : ${classes}">
-            <td th:text="${class.id}"></td>
-            <td th:text="${class.topic}"></td>
-            <td th:text="${class.date}"></td>
-            <td th:text="${class.time}"></td>
-            <td th:text="${class.blockTitle}"></td>
-            <td th:text="${class.courseTitle}"></td>
-        </tr>
-        </tbody>
-    </table>
-
+<div class="container" style="margin-top:20px; background-color: palegreen; margin-bottom: 100px">
+    <h2 style="text-align: center; color: darkgreen; font-family: Brush Script MT; font-size: 60pt">Classes</h2>
+    <div class="row" align="center" text-align="center">
+        <th:block th:each="class : ${classes}">
+            <div class="col-4">
+                <div class="class" style="width: 100%; margin-bottom: 25px;">
+                    <div class="class-body" style="margin-bottom: 100px">
+                        <h5 class="class-course-title custom-center" th:text="${class.courseTitle}" style="margin-top: 20px; background-color: darkgreen; color: palegreen; font-family: Brush Script MT; font-size: 30pt">Course title</h5>
+                        <h5 class="class-block-title custom-center" th:text="${class.blockTitle}" style="margin-top: 20px; background-color: darkgreen; color: palegreen; font-family: Brush Script MT; font-size: 25pt">Block title</h5>
+                        <a>
+                            <img th:src="@{/uploads/classes.png}" class="responsive" />
+                        </a>
+                        <h5 class="class-topic custom-center" th:text="${class.topic}" style="margin-top: 20px; background-color: darkgreen; color: palegreen; font-family: Brush Script MT; font-size: 25pt">Class topic</h5>
+                        <h5 class="class-date custom-center" th:text="${class.date}" style="margin-top: 20px; background-color: darkgreen; color: palegreen; font-family: Brush Script MT; font-size: 15pt">Class date</h5>
+                        <h5 class="class-time custom-center" th:text="${class.time}" style="margin-top: 20px; background-color: darkgreen; color: palegreen; font-family: Brush Script MT; font-size: 15pt">Class time</h5>
+                    </div>
+                </div>
+            </div>
+        </th:block>
+    </div>
 </div>
-<br/>
-<div align="center">
-    <form th:action="@{/main-page/classes-manager}">
-        <button type="submit" class="btn btn-primary" style="width: 40%">Back to the Classes Manager</button>
-    </form>
-</div>
-<br/>
-<div align="center">
-    <form th:action="@{/main-page}">
-        <button type="submit" class="btn btn-primary" style="width: 40%">Back to main page</button>
-    </form>
-</div>
-
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
 </html>
